# Inventory-sales-manager

./: .gitignore  AUDITORIA_PREVENTA.md  InventorySalesManager.spec  README.md  api_fx.py  app.py  db.py  excel_io.py  pyproject.toml  sales.db
.github/workflows/: build.yml  release.yml
docs/operations/: COMMERCIAL_TERMS.md  SUPPORT_SLA_AND_INCIDENTS.md
docs/qa/: QA_FINAL_CHECKLIST.md
docs/release/: RELEASE_PROCESS.md
release/: latest.json
scripts/: check_release.sh
src/inventory_sales_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/ism/: config.py  logging_config.py  main.py
src/ism/application/: __init__.py  container.py
src/ism/domain/: __init__.py  errors.py  models.py
src/ism/repositories/: __init__.py  contracts.py  sqlite_repo.py  unit_of_work.py
src/ism/services/: __init__.py  auth_service.py  backup_service.py  excel_service.py  fx_service.py  inventory_service.py  operations_service.py  purchase_service.py  reporting_service.py  sales_service.py  update_service.py
src/ism/ui/: __init__.py  app.py
src/ism/ui/views/: __init__.py  products_view.py  reports_view.py  restock_view.py  sales_view.py
test/: conftest.py  test_backup_and_auth_policy.py  test_business_invariants.py  test_fx_fallback.py  test_migrations_and_roles.py  test_operations_and_updates.py  test_purchase_atomicity.py  test_sales_fx_validation.py  test_sales_validation.py  test_security_and_permissions.py
